salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/OSMX_Consumos_Clientes__c.object-meta.xml
<CustomObject>
    <label>OSMX_Consumos_Clientes</label>
    <nameField>
        <label>OSMX_Consumos_Clientes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_Consumos_Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>