salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/Id_Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Id_Business_Partner__c</fullName>
    <description>Identificador único de business partner en SAP.</description>
    <externalId>true</externalId>
    <label>Id Business Partner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>