salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/ID_Instalacion__c.field-meta.xml
<CustomField>
    <fullName>ID_Instalacion__c</fullName>
    <label>ID_Instalacion</label>
    <length>15</length>
    <type>Text</type>
</CustomField>