salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/M10__c.field-meta.xml
<CustomField>
    <fullName>M10__c</fullName>
    <label>M10</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>