salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/M11__c.field-meta.xml
<CustomField>
    <fullName>M11__c</fullName>
    <label>M11</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>