salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/M12__c.field-meta.xml
<CustomField>
    <fullName>M12__c</fullName>
    <label>M12</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>