salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/Promedio_por_Sector__c.field-meta.xml
<CustomField>
    <fullName>Promedio_por_Sector__c</fullName>
    <label>Promedio por Sector</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>