salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <externalId>true</externalId>
    <label>Razon_Social</label>
    <length>80</length>
    <type>Text</type>
</CustomField>