salesforce_sfdx/main/default/objects/OSMX_Consumos_Clientes__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>